[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/spr_darkcat/spr_darkcat1.png" type="Texture" id=1]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat5.png" type="Texture" id=2]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat3.png" type="Texture" id=3]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat7.png" type="Texture" id=4]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat4.png" type="Texture" id=5]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat6.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat2.png" type="Texture" id=7]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat8.png" type="Texture" id=8]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/entity_nycto/entity_nycto.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "tp",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="entity_nycto" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 10 )

[node name="node_boss_attacks" parent="." instance=ExtResource( 9 )]

[node name="aspr_darkcat" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"

[node name="col_darkcat" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="area_detect_player" type="Area2D" parent="."]

[node name="col_detect_player" type="CollisionShape2D" parent="area_detect_player"]
shape = SubResource( 3 )

[node name="node_timer" type="Node" parent="."]

[node name="timer_stage_one" type="Timer" parent="node_timer"]
wait_time = 5.0
one_shot = true

[node name="timer_stage_two" type="Timer" parent="node_timer"]
wait_time = 3.0
one_shot = true

[node name="timer_stage_three" type="Timer" parent="node_timer"]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="area_detect_player" to="." method="_on_area_detect_player_body_entered"]
